--- a/src/sass/block/_projects.sass
+++ b/src/sass/block/_projects.sass
@@ -1,9 +1,9 @@
 .section-projects
-    padding: 96px 0 99px
+    padding: 90px 0 100px
 .projects
     background-color: $project-bg
     &__title
-        margin: 0 0 28px
+        margin: 0 0 25px
         position: relative
         &:after
             content: ''
@@ -12,35 +12,35 @@
             background-color: $form-button
             position: absolute
             left: 50%
-            bottom: -30px
+            bottom: -27px
             transform: translateX(-50%)
     &__subtitle
-        padding-top: 40px
-        margin-bottom: 99px 
+        padding-top: 39px
+        margin-bottom: 97px 
 .slider
     &-project
         max-width: 405px
     &__image
         width: 409px
-        // height: 340px    
+        height: 340px    
     &__title
         color: $black
         font-size: 24px
         font-weight: normal
-        margin: 3px 0 53px
+        margin: 0 0 44px
     &__description
         display: block
         color: $slider-description
         font-size: 12px
         font-weight: 300
         line-height: 20px 
-        margin-bottom: 18px
+        margin-bottom: 8px
     &__name
         color: $black
         font-size: 16px
         font-weight: 300
         line-height: 20px 
-        margin: 0 0 60px
+        margin: 0 0 52px
 .content
     display: flex
     flex-wrap: wrap
@@ -50,7 +50,7 @@
         font-size: 12px
         font-weight: 300
         line-height: 20px 
-        margin: 0 0 16px
+        margin: 0 0 7px
     &__text
         color: $black
         font-size: 16px
@@ -58,7 +58,7 @@
         line-height: 20px
         margin: 0
     &__button
-        margin-top: 67px
+        margin-top: 62px
         width: 216px
         height: 60px
         background-color: $form-button
