--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1022,7 +1022,6 @@ button {
 
 .slider__image {
   width: 409px;
-  height: 340px;
 }
 
 .slider__title {
@@ -1252,6 +1251,29 @@ button {
   }
 }
 
+@media (max-width: 1024px) {
+  .section-projects {
+    padding: 60px 0 50px;
+  }
+  .projects__title:after {
+    bottom: -20px;
+  }
+  .projects__subtitle {
+    padding-top: 20px;
+    margin-bottom: 50px;
+  }
+  .slick-slider,
+  .slick-initialized .slick-slide {
+    max-width: 780px;
+  }
+  .slider__image {
+    width: 390px;
+  }
+  .slider-project {
+    max-width: 330px;
+  }
+}
+
 @media (max-width: 992px) {
   .header {
     background-color: transparent;
@@ -1329,6 +1351,50 @@ button {
   .layout:hover .layout-modal__link {
     background-color: transparent;
     color: #000000;
+  }
+}
+
+@media (max-width: 890px) {
+  .projects .container {
+    max-width: 500px;
+  }
+  .projects__subtitle {
+    max-width: 360px;
+    margin: 0 auto 25px;
+  }
+  .slick-initialized .slick-slide {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .projects__subtitle {
+    padding-top: 10px;
+    margin-bottom: 30px;
+    font-size: 18px;
+  }
+  .slider__title {
+    margin: 25px 0 20px;
+    text-align: center;
+  }
+  .slider__name {
+    margin: 0 0 25px;
+  }
+  .content__button {
+    margin: 40px auto 0;
+    display: block;
+  }
+  .projects__arrows {
+    top: 100%;
+  }
+  .arrows__right {
+    right: 50px;
+  }
+  .arrows__left {
+    left: 50px;
   }
 }
 
