--- a/src/sass/block/_projects.sass
+++ b/src/sass/block/_projects.sass
@@ -55,7 +55,7 @@
         font-size: 16px
         font-weight: 300
         line-height: 20px
-        margin: 0
+        margin: 0 -18px 0 0
     &__button
         margin-top: 62px
         width: 216px
@@ -71,7 +71,7 @@
     position: relative
 .projects__arrows
     position: absolute
-    top: 50%
+    top: 44%
     width: 100%
 .arrows
     &__left,
@@ -81,7 +81,7 @@
         height: 26px
         cursor: pointer
     &__right
-        right: 0
+        right: -7px
     &__left
-        left: 0            
+        left: 10px            
             
