--- Auto-Git Commit ---

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -35,7 +35,7 @@
             max-width: 330px                                        
 @media (max-width: 992px)
     .header
-        background-color: transparent
+        background-color: $footer-bg
         &-nav
             display: none
             flex-direction: column
@@ -63,7 +63,7 @@
             &__phone
                 margin-bottom: 13px
     .section-main
-        padding: 40px 0 
+        padding: 108px 0 50px
     .main
         &:before 
             min-height: 563px
