--- a/src/css/style.css
+++ b/src/css/style.css
@@ -516,7 +516,10 @@ button {
 }
 
 .header {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   z-index: 2;
   background-color: #e7e7e7;
   -webkit-box-shadow: 0 21px 21px rgba(0, 0, 0, 0.28);
@@ -587,7 +590,7 @@ button {
 }
 
 .section-main {
-  padding: 125px 0 86px;
+  padding: 178px 0 86px;
 }
 
 .main:before {
@@ -1286,7 +1289,7 @@ button {
 
 @media (max-width: 992px) {
   .header {
-    background-color: transparent;
+    background-color: #191919;
   }
   .header-nav {
     display: none;
@@ -1324,7 +1327,7 @@ button {
     margin-bottom: 13px;
   }
   .section-main {
-    padding: 40px 0;
+    padding: 108px 0 50px;
   }
   .main:before {
     min-height: 563px;
