--- a/src/sass/block/_header.sass
+++ b/src/sass/block/_header.sass
@@ -1,5 +1,8 @@
 .header
-    position: relative
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
     z-index: 2
     background-color: $header-bg
     box-shadow: 0 21px 21px rgba(0, 0, 0, 0.28)
