--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -45,6 +45,7 @@ button
     display: none
     cursor: pointer
     position: absolute
+    top: 30px
     &-block
         position: relative
         &__top,
