--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -59,7 +59,8 @@
             &__phone
                 color: $white 
         &-contact
-            margin-top: 28px
+            //margin-top: 28px
+            margin: 15px 0
             &__phone
                 margin-bottom: 13px
     .section-main
@@ -168,7 +169,7 @@
         & .container
             padding: 0 8px
         &-nav
-            top: 80px
+            top: 70px
             &__link
                 padding: 7px 8px
         &-contact
