--- a/src/sass/block/_equipment.sass
+++ b/src/sass/block/_equipment.sass
@@ -3,4 +3,9 @@
 .equipment
     background: url(../img/equipment/equipment.jpg) no-repeat
     min-height: 756px
-    background-size: cover    
+    background-size: cover
+    &__title
+        color: $white
+        font-size: 24px
+        font-weight: normal
+        line-height: 31px    
