--- Auto-Git Commit ---

--- a/src/sass/block/_equipment.sass
+++ b/src/sass/block/_equipment.sass
@@ -1,5 +1,5 @@
 .section-equipment
-    padding: 108px 0 126px
+    padding: 102px 0 37px
 .equipment
     background: url(../img/equipment/equipment.jpg) no-repeat
     min-height: 756px
@@ -8,4 +8,23 @@
         color: $white
         font-size: 24px
         font-weight: normal
-        line-height: 31px    
+        line-height: 31px 
+        text-align: center
+        margin: 0 auto 99px
+        max-width: 675px  
+.equipments
+    flex-basis: 21%
+    margin-bottom: 70px
+    &-block
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-between
+    &__image
+        text-align: center
+        margin: 0 auto 35px
+    &__text
+        color: $white
+        font-size: 15px
+        font-weight: 300
+        line-height: 20px
+        text-align: center
