--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1230,7 +1230,7 @@ button {
 }
 
 .section-equipment {
-  padding: 108px 0 126px;
+  padding: 102px 0 37px;
 }
 
 .equipment {
@@ -1244,6 +1244,39 @@ button {
   font-size: 24px;
   font-weight: normal;
   line-height: 31px;
+  text-align: center;
+  margin: 0 auto 99px;
+  max-width: 675px;
+}
+
+.equipments {
+  -ms-flex-preferred-size: 21%;
+      flex-basis: 21%;
+  margin-bottom: 70px;
+}
+
+.equipments-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.equipments__image {
+  text-align: center;
+  margin: 0 auto 35px;
+}
+
+.equipments__text {
+  color: #ffffff;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 20px;
+  text-align: center;
 }
 
 @media (max-width: 1200px) {
@@ -1434,6 +1467,10 @@ button {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+  .equipment .container {
+    max-width: 700px;
+    margin: auto;
   }
 }
 
