--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -131,7 +131,11 @@
 @media (max-width: 790px)
     .layouts
         flex-direction: column
-        align-items: center                      
+        align-items: center
+    .equipment
+        & .container
+            max-width: 700px
+            margin: auto                          
 @media (max-width: 768px)
     .main
         &:before
