--- Auto-Git Commit ---

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -241,10 +241,12 @@
     .layout
         max-width: 310px
         padding: 20px 5px 30px
+    .projects__arrows
+        top: 93%
     .arrows__right
-        right: 110px
+        right: 30px
     .arrows__left
-        left: 110px
+        left: 30px
     .section-title
         font-size: 22px
     .projects
@@ -257,12 +259,15 @@
     .equipment
         &__title
             font-size: 18px
-            max-width: none            
-@media (max-width: 390px) 
-    .arrows__right
-        right: 95px
-    .arrows__left
-        left: 95px
+            max-width: none
     .slick-slider, 
     .slick-initialized .slick-slide
         margin-bottom: 0
+    .section-projects
+        padding: 50px 0
+@media (max-width: 380px)
+    .arrows__right
+        right: 5px
+    .arrows__left
+        left: 5px
+@media (max-width: 380px)               
