--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -23,7 +23,7 @@ body
 @import 'block/projects'
 @import 'slick'
 @import 'block/equipment'
-
+@import 'block/clients'
 
 
 @import 'media'            
