--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1127,7 +1127,7 @@ button {
   -ms-touch-action: pan-y;
   touch-action: pan-y;
   -webkit-tap-highlight-color: transparent;
-  max-width: 855px;
+  max-width: 870px;
   margin: auto;
 }
 
@@ -1274,6 +1274,19 @@ button {
   line-height: 20px;
   text-align: center;
   margin: 0;
+}
+
+.section-clients {
+  padding: 100px 0 177px;
+}
+
+.clients__title {
+  margin: 0 0 100px;
+  color: #000000;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: center;
 }
 
 @media (max-width: 1200px) {
@@ -1622,11 +1635,14 @@ button {
     max-width: 310px;
     padding: 20px 5px 30px;
   }
+  .projects__arrows {
+    top: 93%;
+  }
   .arrows__right {
-    right: 110px;
+    right: 30px;
   }
   .arrows__left {
-    left: 110px;
+    left: 30px;
   }
   .section-title {
     font-size: 22px;
@@ -1644,18 +1660,21 @@ button {
     font-size: 18px;
     max-width: none;
   }
-}
-
-@media (max-width: 390px) {
-  .arrows__right {
-    right: 95px;
-  }
-  .arrows__left {
-    left: 95px;
-  }
   .slick-slider,
   .slick-initialized .slick-slide {
     margin-bottom: 0;
+  }
+  .section-projects {
+    padding: 50px 0;
+  }
+}
+
+@media (max-width: 380px) {
+  .arrows__right {
+    right: 5px;
+  }
+  .arrows__left {
+    left: 5px;
   }
 }
 /*# sourceMappingURL=style.css.map */
