--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1677,4 +1677,19 @@ button {
     left: 5px;
   }
 }
+
+@media (max-width: 337px) {
+  .projects__arrows {
+    top: 89%;
+  }
+  .arrows__right {
+    right: 0;
+  }
+  .arrows__left {
+    left: 0;
+  }
+  .section-projects {
+    padding: 50px 0 20px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
