--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -270,4 +270,12 @@
         right: 5px
     .arrows__left
         left: 5px
-@media (max-width: 380px)               
+@media (max-width: 337px)
+    .projects__arrows
+        top: 89%
+    .arrows__right
+        right: 0
+    .arrows__left
+        left: 0 
+    .section-projects
+        padding: 50px 0 20px       
