--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -272,10 +272,14 @@
         left: 5px
 @media (max-width: 337px)
     .projects__arrows
-        top: 89%
+        top: 92%
     .arrows__right
         right: 0
     .arrows__left
         left: 0 
     .section-projects
-        padding: 50px 0 20px       
+        padding: 50px 0 20px
+    .slider
+        &__name
+            line-height: normal
+            font-size: 15px           
