--- Auto-Git Commit ---

--- a/src/sass/block/_clients.sass
+++ b/src/sass/block/_clients.sass
@@ -1,5 +1,5 @@
 .section-clients
-    padding: 100px 0 177px
+    padding: 97px 0 176px
 .clients
     &__title
         margin: 0 0 100px
@@ -8,3 +8,29 @@
         font-weight: 400
         line-height: 22px
         text-align: center
+.responsive.slick-slider
+    max-width: 960px 
+.arrows
+    &-left__arrow,
+    &-right__arrow
+        cursor: pointer 
+.responsive.slick-slider .slick-track
+    display: flex
+    align-items: center
+    justify-content: space-between
+.responsive .slick-slide img
+    margin: -3px auto 0
+.responsive
+    &__arrow
+        position: absolute
+        bottom: 46px
+        width: 100%
+.arrows-left__arrow, 
+.arrows-right__arrow
+    position: absolute
+    width: 14px
+    height: 26px
+.arrows-left__arrow
+    left: 8px 
+.arrows-right__arrow
+    right: -8px                                   
