--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1277,7 +1277,7 @@ button {
 }
 
 .section-clients {
-  padding: 100px 0 177px;
+  padding: 97px 0 176px;
 }
 
 .clients__title {
@@ -1287,6 +1287,51 @@ button {
   font-weight: 400;
   line-height: 22px;
   text-align: center;
+}
+
+.responsive.slick-slider {
+  max-width: 960px;
+}
+
+.arrows-left__arrow, .arrows-right__arrow {
+  cursor: pointer;
+}
+
+.responsive.slick-slider .slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.responsive .slick-slide img {
+  margin: -3px auto 0;
+}
+
+.responsive__arrow {
+  position: absolute;
+  bottom: 46px;
+  width: 100%;
+}
+
+.arrows-left__arrow,
+.arrows-right__arrow {
+  position: absolute;
+  width: 14px;
+  height: 26px;
+}
+
+.arrows-left__arrow {
+  left: 8px;
+}
+
+.arrows-right__arrow {
+  right: -8px;
 }
 
 @media (max-width: 1200px) {
