--- Auto-Git Commit ---

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -24,6 +24,7 @@ body
 @import 'slick'
 @import 'block/equipment'
 @import 'block/clients'
+@import 'block/contacts'
 
 
 @import 'media'            
