--- a/src/sass/block/_contacts.sass
+++ b/src/sass/block/_contacts.sass
@@ -1,19 +1,17 @@
 .ymap-container
   position: relative
-  margin: 3em 0 2em 0
   overflow: hidden
   cursor: pointer
-  background: url('../img/yandex-before-load.png') #ffffff no-repeat
+  background: url('../img/footer/map.jpg') #ffffff no-repeat
   background-position: center center
   background-size: cover
-  box-shadow: 0 0 2em  0 rgba(0,0,0,.2)
  
 /* Блок, в котором появится Яндекс.Карта */
 #map-yandex
   position: relative
   z-index: 7
   width: 100%
-  height: 20em
+  height: 400px
   cursor: pointer
   background-color: transparent 
 
@@ -25,7 +23,7 @@
   width: 100%
   height: 100%
   overflow: hidden
-  color: #000000
+  color: $
   transition: opacity .7s ease
   opacity: 0
   background-color: rgba(0,0,0,.55)
