--- a/src/sass/block/_contacts.sass
+++ b/src/sass/block/_contacts.sass
@@ -2,8 +2,7 @@
   position: relative
   overflow: hidden
   cursor: pointer
-  background: url('../img/footer/map.jpg') #ffffff no-repeat
-  background-position: center center
+  background: url('../img/footer/map.jpg') center no-repeat
   background-size: cover
  
 /* Блок, в котором появится Яндекс.Карта */
@@ -23,7 +22,7 @@
   width: 100%
   height: 100%
   overflow: hidden
-  color: $
+  color: $black
   transition: opacity .7s ease
   opacity: 0
   background-color: rgba(0,0,0,.55)
@@ -40,7 +39,7 @@
   height: 48px
   content: ''
   animation: rotation 1s linear infinite
-  border: solid 8px #ffffff;
+  border: solid 8px $white;
   border-left-color: transparent
   border-radius: 50%
  
@@ -54,4 +53,16 @@
   from
     opacity: .5
   to
-    opacity: 1    
+    opacity: 1 
+
+ymaps .ymaps-2-1-73-copyright,
+ymaps .ymaps-2-1-73-float-button-icon_icon_expand,
+ymaps .ymaps-2-1-73-zoom__scale,
+ymaps .ymaps-2-1-73-_hidden-text
+  display: none  
+ymaps .ymaps-2-1-73-zoom
+  height: auto !important
+ymaps .ymaps-2-1-73-zoom__plus
+  top: 50px
+ymaps .ymaps-2-1-73-zoom__minus
+    bottom: -60px             
