--- a/src/sass/block/_contacts.sass
+++ b/src/sass/block/_contacts.sass
@@ -66,3 +66,14 @@ ymaps .ymaps-2-1-73-zoom__plus
   top: 50px
 ymaps .ymaps-2-1-73-zoom__minus
     bottom: -60px             
+.contacts-section
+  padding: 50px 0 58px
+  background-color: $footer-bg
+  &-left
+    &__address
+      color: $white
+      font-size: 13px
+      font-weight: 300
+      margin: 0
+    &:before
+      content: url(../img/footer/geo.svg) 
