--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1348,7 +1348,7 @@ button {
   position: relative;
   z-index: 7;
   width: 100%;
-  height: 400px;
+  height: 422px;
   cursor: pointer;
   background-color: transparent;
 }
@@ -1452,6 +1452,18 @@ ymaps .ymaps-2-1-73-zoom__minus {
   background-color: #191919;
 }
 
+.contacts-section .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .contacts__address {
   color: #ffffff;
   font-size: 13px;
@@ -1476,6 +1488,9 @@ ymaps .ymaps-2-1-73-zoom__minus {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 186px;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .footer-contact__phone {
@@ -1488,6 +1503,11 @@ ymaps .ymaps-2-1-73-zoom__minus {
 .footer-contact__callback {
   padding: 0;
   width: 175px;
+}
+
+.contacts-left {
+  margin-top: 6px;
+  margin-left: 14px;
 }
 
 @media (max-width: 1200px) {
