--- a/src/sass/block/_contacts.sass
+++ b/src/sass/block/_contacts.sass
@@ -10,7 +10,7 @@
   position: relative
   z-index: 7
   width: 100%
-  height: 400px
+  height: 422px
   cursor: pointer
   background-color: transparent 
 
@@ -70,6 +70,10 @@ ymaps .ymaps-2-1-73-zoom__minus
   &-section
     padding: 50px 0 58px
     background-color: $footer-bg
+    & .container
+      display: flex
+      align-items: center
+      justify-content: space-between   
   &__address
     color: $white
     font-size: 13px
@@ -85,6 +89,7 @@ ymaps .ymaps-2-1-73-zoom__minus
   display: flex
   flex-direction: column
   width: 186px
+  align-items: flex-end
 .footer-contact__phone
   text-align: right
   font-size: 17px
@@ -92,4 +97,7 @@ ymaps .ymaps-2-1-73-zoom__minus
   color: $white 
 .footer-contact__callback
   padding: 0
-  width: 175px          
+  width: 175px
+.contacts-left
+  margin-top: 6px
+  margin-left: 14px            
