--- a/src/sass/block/_contacts.sass
+++ b/src/sass/block/_contacts.sass
@@ -94,10 +94,13 @@ ymaps .ymaps-2-1-73-zoom__minus
   text-align: right
   font-size: 17px
   font-weight: bold
-  color: $white 
+  color: $white
+  margin-bottom: 3px 
 .footer-contact__callback
   padding: 0
   width: 175px
 .contacts-left
   margin-top: 6px
-  margin-left: 14px            
+  margin-left: 14px
+.contacts-right
+  margin-right: -6px            
