--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1498,6 +1498,7 @@ ymaps .ymaps-2-1-73-zoom__minus {
   font-size: 17px;
   font-weight: bold;
   color: #ffffff;
+  margin-bottom: 3px;
 }
 
 .footer-contact__callback {
@@ -1510,6 +1511,10 @@ ymaps .ymaps-2-1-73-zoom__minus {
   margin-left: 14px;
 }
 
+.contacts-right {
+  margin-right: -6px;
+}
+
 @media (max-width: 1200px) {
   .main .container {
     max-width: 1100px;
@@ -1519,6 +1524,12 @@ ymaps .ymaps-2-1-73-zoom__minus {
   }
   .main-text {
     margin-left: 0;
+  }
+  .contacts-left {
+    margin: 0;
+  }
+  .contacts-right {
+    margin: 0;
   }
 }
 
@@ -1575,6 +1586,15 @@ ymaps .ymaps-2-1-73-zoom__minus {
   }
   .clients__title {
     margin: 0 0 50px;
+  }
+  #map-yandex {
+    height: 320px;
+  }
+  ymaps .ymaps-2-1-73-zoom__plus {
+    top: 30px;
+  }
+  ymaps .ymaps-2-1-73-zoom__minus {
+    bottom: -40px;
   }
 }
 
@@ -1823,6 +1843,33 @@ ymaps .ymaps-2-1-73-zoom__minus {
   }
   .arrows-right__arrow {
     right: 30px;
+  }
+  .contacts-section .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer-contact__phone {
+    margin: 15px auto 10px;
+  }
+  .contacts__address:before {
+    top: -30px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  .contacts__address br {
+    display: none;
+  }
+  .contacts__address {
+    text-align: center;
+    width: 150px;
+    margin: 0;
+  }
+  .contacts-section {
+    padding: 50px 0 30px;
   }
 }
 
