--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1515,6 +1515,69 @@ ymaps .ymaps-2-1-73-zoom__minus {
   margin-right: -6px;
 }
 
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 20;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 25;
+}
+
+.modal-form {
+  max-width: 370px;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 40px 55px 43px;
+  position: relative;
+}
+
+.modal-form__close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 32px;
+  height: 32px;
+  font-size: 28px;
+  border: none;
+}
+
+.modal__form-block {
+  position: relative;
+}
+
+.modal__form-block label {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  width: 100%;
+  color: #ff0000;
+  text-align: center;
+  border: none;
+}
+
+.modal__input {
+  margin-bottom: 15px;
+}
+
+.modal__button {
+  margin: 5px auto 0;
+  display: block;
+  font-size: 15px;
+  letter-spacing: 0.38px;
+}
+
 @media (max-width: 1200px) {
   .main .container {
     max-width: 1100px;
