--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -25,6 +25,6 @@ body
 @import 'block/equipment'
 @import 'block/clients'
 @import 'block/contacts'
-
+@import 'modal'
 
 @import 'media'            
