--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -310,6 +310,10 @@
         margin-bottom: 0
     .section-projects
         padding: 50px 0
+    .modal-form
+        padding: 45px 25px 30px
+    .modal
+        max-width: 95%        
 @media (max-width: 380px)
     .arrows__right
         right: 5px
