--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -1,4 +1,5 @@
 .mask
+    display: none
     position: fixed
     top: 0
     left: 0
@@ -7,14 +8,15 @@
     background-color: rgba(0,0,0, .8)
     z-index: 20
 .modal
+    display: none
+    max-width: 370px
+    width: 100%
     position: fixed
     top: 50%
     left: 50%
     transform: translate(-50%,-50%)
     z-index: 25
     &-form
-        max-width: 370px
-        width: 100%
         background-color: $white
         padding: 40px 55px 43px
         position: relative
@@ -22,9 +24,9 @@
             position: absolute
             top: 0
             right: 0
-            width: 32px
-            height: 32px
-            font-size: 28px
+            width: 28px
+            height: 28px
+            font-size: 26px
             border: none
     &__form
         &-block
