--- Auto-Git Commit ---

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -52,12 +52,12 @@
     .clients
         &__title
             margin: 0 0 50px
-    #map-yandex
-        height: 320px
-    ymaps .ymaps-2-1-73-zoom__plus
-        top: 30px
-    ymaps .ymaps-2-1-73-zoom__minus
-        bottom: -40px                                                                              
+    // #map-yandex
+    //     height: 320px
+    // ymaps .ymaps-2-1-73-zoom__plus
+    //     top: 30px
+    // ymaps .ymaps-2-1-73-zoom__minus
+    //     bottom: -40px                                                                              
 @media (max-width: 992px)
     .header
         background-color: $footer-bg
