--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -1335,118 +1334,6 @@ button {
   right: -8px;
 }
 
-.ymap-container {
-  position: relative;
-  overflow: hidden;
-  cursor: pointer;
-  background: url("../img/footer/map.jpg") center no-repeat;
-  background-size: cover;
-}
-
-/* Блок, в котором появится Яндекс.Карта */
-#map-yandex {
-  position: relative;
-  z-index: 7;
-  width: 100%;
-  height: 422px;
-  cursor: pointer;
-  background-color: transparent;
-}
-
-.loader {
-  position: absolute;
-  z-index: 15;
-  top: -100%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  color: #000000;
-  -webkit-transition: opacity .7s ease;
-  -o-transition: opacity .7s ease;
-  transition: opacity .7s ease;
-  opacity: 0;
-  background-color: rgba(0, 0, 0, 0.55);
-}
-
-.loader.is-active {
-  top: 0;
-  opacity: 1;
-}
-
-.loader-default:after {
-  position: absolute;
-  top: calc(50% - 24px);
-  left: calc(50% - 24px);
-  width: 48px;
-  height: 48px;
-  content: '';
-  -webkit-animation: rotation 1s linear infinite;
-          animation: rotation 1s linear infinite;
-  border: solid 8px #ffffff;
-  border-left-color: transparent;
-  border-radius: 50%;
-}
-
-@-webkit-keyframes rotation {
-  from {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-  }
-  to {
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg);
-  }
-}
-
-@keyframes rotation {
-  from {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-  }
-  to {
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg);
-  }
-}
-
-@-webkit-keyframes blink {
-  from {
-    opacity: .5;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes blink {
-  from {
-    opacity: .5;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-ymaps .ymaps-2-1-73-copyright,
-ymaps .ymaps-2-1-73-float-button-icon_icon_expand,
-ymaps .ymaps-2-1-73-zoom__scale,
-ymaps .ymaps-2-1-73-_hidden-text {
-  display: none;
-}
-
-ymaps .ymaps-2-1-73-zoom {
-  height: auto !important;
-}
-
-ymaps .ymaps-2-1-73-zoom__plus {
-  top: 50px;
-}
-
-ymaps .ymaps-2-1-73-zoom__minus {
-  bottom: -60px;
-}
-
 .contacts-section {
   padding: 50px 0 58px;
   background-color: #191919;
@@ -1513,6 +1400,15 @@ ymaps .ymaps-2-1-73-zoom__minus {
 
 .contacts-right {
   margin-right: -6px;
+}
+
+.map-show iframe {
+  height: 422px;
+}
+
+.map-show img {
+  width: 100%;
+  height: 422px;
 }
 
 .mask {
@@ -1651,15 +1547,6 @@ ymaps .ymaps-2-1-73-zoom__minus {
   }
   .clients__title {
     margin: 0 0 50px;
-  }
-  #map-yandex {
-    height: 320px;
-  }
-  ymaps .ymaps-2-1-73-zoom__plus {
-    top: 30px;
-  }
-  ymaps .ymaps-2-1-73-zoom__minus {
-    bottom: -40px;
   }
 }
 
