--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1411,6 +1411,12 @@ button {
   height: 422px;
 }
 
+.map {
+  background: url(../img/footer/map.jpg) no-repeat;
+  width: 100%;
+  height: 422px;
+}
+
 .mask {
   display: none;
   position: fixed;
