--- a/src/sass/block/_contacts.sass
+++ b/src/sass/block/_contacts.sass
@@ -42,6 +42,6 @@
   width: 100%
   height: 422px
 .map
-  background: url(../img/footer/map.jpg) no-repeat;
-  width: 100%
+  background: url(../img/footer/map.jpg) center no-repeat;
+  background-size: cover
   height: 422px               
