--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -109,6 +109,22 @@
         &:hover .layout-modal__link 
             background-color: transparent
             color: $black
+    .button-callback
+        &:hover
+            border-bottom: 1px solid $button
+            color: $button
+    .main
+        &__button
+            &:hover
+                border: none
+                color: $white
+                background-color: $form-button
+    .modal
+        &__button
+            &:hover
+                border: none
+                color: $white
+                background-color: $form-button                             
 @media (max-width: 890px)
     .projects
         & .container
