--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -35,7 +35,7 @@ button
     &:hover
         background-color: transparent
         color: $black
-        border: 1px solid $header-bg 
+        border: 1px solid $black 
 .error
     border: 1px solid $error
 .section-title
