--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -124,7 +124,13 @@
             &:hover
                 border: none
                 color: $white
-                background-color: $form-button                             
+                background-color: $form-button
+    .content
+        &__button
+            &:hover
+                background-color: $form-button
+                color: $white
+                border: none                                        
 @media (max-width: 890px)
     .projects
         & .container
