--- a/src/sass/block/_projects.sass
+++ b/src/sass/block/_projects.sass
@@ -65,6 +65,11 @@
         font-weight: normal
         letter-spacing: 0.33px
         color: $white
+        transition: .4s
+        &:hover
+            background-color: transparent
+            color: $black
+            border: 1px solid $black
 .wrap-slide
     position: relative
 .projects__arrows
